--- a/app_client/locationDetail/locationDetail.view.html
+++ b/app_client/locationDetail/locationDetail.view.html
@@ -3,5 +3,45 @@
 <div class="container">
   <page-header content="vm.pageHeader"></page-header>
 
+  <div class="row">
+    <div class="col-xs-12 col-md-9">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6">
+          <p class="rating" rating-stars rating="vm.data.location.rating"></p>
+          <p>{{ vm.data.location.address }}</p>
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h2 class="panel-title">Opening hours</h2>
+            </div>
+            <div class="panel-body">
+              <!-- Opening times to go hehe -->
+            </div>
+          </div>
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h2 class="panel-title">Facilities</h2>
+            </div>
+            <div class="panel-body">
+              <span class="label label-warning label-facility" ng-repeat="facility in vm.data.location.Facilities">
+                <span class="glyphicon glyphicon-ok"></span>
+                {{ facility }}
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 location-map">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h2 class="panel-title">Location map></h2>
+            </div>
+            <div class="panel-body">
+              <img src="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <footer-generic></footer-generic>
 </div>
